--- a/templates/cine.html
+++ b/templates/cine.html
@@ -1,12 +1,12 @@
 ﻿{% extends 'base/index.html' %}
 {% block body %}
 <div class="contenido-interno">
-	<h2>Cinestar Excelsior</h2>
+	<h2>{{cinema.RazonSocial}}</h2>
 
 	<div class="cine-info">
 		<div class="cine-info datos">
-			<p>Jirón de la Unión 780 - Lima</p>
-			<p>Teléfono: 714-1865 anexo 865</p>
+			<p> {{cinema.Direccion}} </p>
+			<p>Telefono: {{cinema.Telefonos}} </p>
 			<br>
 			<div class="tabla">
 				<div class="fila">
@@ -49,7 +49,7 @@
 					Sur, Porteño, Tumbes y Tacna.</p>
 			</div>
 		</div>
-		<img src="img/cine/1.2.jpg">
+		<img src="{{ url_for('static', filename='img/cine/' + cinema.idCine|string + '.2.jpg') }}">
 		<br><br>
 		<h4>Los horarios de cada función están sujetos a cambios sin previo aviso.</h4><br>
 		<div class="cine-info peliculas">
@@ -80,7 +80,7 @@
 		</div>
 	</div>
 	<div>
-		<img style="float:left;" src="img/cine/1.3.jpg">
+		<img style="float:left;" src="{{ url_for('static', filename='img/cine/' + cinema.idCine|string + '.3.jpg') }}">
 		<span class="tx_gris">Precios de los juegos: desde S/1.00 en todos los Cine Star.<br>
 			Horario de atención de juegos es de 12:00 m hasta las 10:30 pm.
 			<br> <br>
